alignment on for you page fixed

--- a/src/components/RecAlgoMenu/RecAlgoMenu.module.css
+++ b/src/components/RecAlgoMenu/RecAlgoMenu.module.css
@@ -11,5 +11,5 @@
   color: rgb(240, 240, 240);
   font-size: 18px;
   position: fixed;
-  top: clamp(100px, 12vh, 400px);
+  top: clamp(100px, 13vh, 400px);
 }
